会话管理优化